# backend

./: .gitignore  README.md  baseTeam.py  baseTeamAssis.py  exampleenv  main.py  pyproject.toml
agents/: BaseEmotionAgent.py  __init__.py  baseAgent.py  baseAssistant.py
agents/clients/: Openai.py  __init__.py  openaiForAss.py
agents/pormpt/: basePrompt.py  parentPrompt.py
agents/tools/: AllTools.py  __init__.py  useCalculator.py  useTavilySearch.py
developDoc/agents/: BaseEmotionAgent.md  development_log.md  project_status.md
teams/: BaseTeamAssis.py
