[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-ext[openai]>=0.6.1",
    "dotenv>=0.9.9",
    "openai>=1.86.0",
    "requests>=2.32.4",
    "ruff>=0.11.13",
]
